# rust_playground

./: README.md  helloworld.rs
controlflow/: Cargo.toml
controlflow/src/: main.rs
enum_1/: Cargo.toml
enum_2/: Cargo.toml
enum_2/src/: main.rs
enum_3/: Cargo.toml
enum_3/src/: main.rs
enums/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
if_let/: Cargo.toml
if_let/src/: main.rs
json_deserializar_json/src/: main.rs
json_deserializar_struct/: Cargo.toml
json_deserializar_struct/src/: main.rs
json_serializar_json/src/: main.rs
json_serializar_raw/: Cargo.toml
json_serializar_raw/src/: main.rs
json_serializar_struct/: Cargo.toml
json_serializar_struct/src/: main.rs
methods/: Cargo.toml
methods/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
panic/: Cargo.toml
panic/src/: main.rs
patternmatching/: Cargo.toml
patternmatching/src/: main.rs
raceconditions/: Cargo.toml
raceconditions/src/: main.rs
sample/: Cargo.toml
sample/src/: main.rs
slices/: Cargo.toml
slices/src/: main.rs
string/: Cargo.toml
string/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
vector/: Cargo.toml
vector/src/: main.rs
vector_not_same/: Cargo.toml
vector_not_same/src/: main.rs
