[package]
name = "json_deserializar_struct"
version = "0.1.0"
authors = ["JavierGonzalezAlvarez <jgalvarez.jga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#uso una macro derive
serde = { version ="1.0", features = ["derive"] }
#para leer o escribir json
serde_json = "1.0"
#serde derive
serde_derive = "1.0"